@startuml
class Usuario {
  name: String
  nombre: String
  contraseña: String
  Iniciar(String nombre, String contraseña): boolean
  Registrar(String nombre, String contraseña): None
}

class Foto {
  ruta: String
  next: Foto
  data: String
  mostrar(): None
}

class Registro {
  resultado: String
  fotoI: Foto
  fotoU: Foto
  añadir(Foto foto): None
  mostrar(): None
}

Registro o-- Foto
Usuario --* Registro
@enduml
